src/test/ui/consts/promote_const_let.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/promote_const_let.rs:6:10
   |
LL |         &y //~ ERROR does not live long enough
   |          ^ borrowed value does not live long enough
LL |     };
   |     - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
